# bicluster

./: README.md  pyproject.toml
docs/: Demonstration.ipynb  hillclimb-experiments.ipynb
src/bicluster/: __init__.py
