[project]
name = "bicluster"
version = "0.1.0"
description = "Implements a biclustering algorithm using E-M"
readme = "README.md"
authors = [
    { name = "Rod Gomez", email = "armyofthepenguin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
