[project]
name = "bicluster"
version = "0.1.0"
description = "Implements a biclustering algorithm using E-M"
# Use a valid SPDX license expression
license = "MIT"
# Specify the license file(s) to include
license-files = ["LICENSE"]

readme = "README.md"
authors = [
    { name = "Rod Gomez", email = "armyofthepenguin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
